--- a/src/main/resources/templates/client/component/productMenu.html
+++ b/src/main/resources/templates/client/component/productMenu.html
@@ -28,8 +28,7 @@
                                     </a>
 
                                     <div class="product-rating mt-2">
-
-                                        <span>.</span>
+                                        <span class="text-content">Stock: [[${products[i].stockQuantity}]]</span>
                                     </div>
 
 
@@ -65,7 +64,9 @@
 
                                     <div class="product-rating mt-2">
 
-                                        <span>.</span>
+                                        <div class="product-rating mt-2">
+                                            <span class="text-content">Stock: [[${products[i + 1].stockQuantity}]]</span>
+                                        </div>
                                     </div>
 
 
