--- a/src/main/resources/templates/client/login.html
+++ b/src/main/resources/templates/client/login.html
@@ -173,7 +173,7 @@
                                                 id="flexCheckDefault" name="remember-me">
                                             <label class="form-check-label" for="flexCheckDefault">Remember me</label>
                                         </div>
-                                        <a href="forgot.html" class="forgot-password">Forgot Password?</a>
+                                        <a th:href="@{/forgot}" class="forgot-password">Forgot Password?</a>
                                     </div>
                                 </div>
 
